# kas-mc-pro

./: .gitignore  NuGet.config  README.md  build-ubuntu-20.04.sh  install-dotnet6-ubuntu22.sh  kas-mc-pro.sln  pool.json
.github/workflows/: build.yml  dotnet.yml
examples/: Multipool.json  aeternity_pool.json  alephium_pool.json  beam_pool.json  bitcoin_cash_pool.json  kaspa_pool.json  litecoin_pool.json  waglayla_pool.json
src/Miningcore/: AutofacModule.cs  Miningcore.csproj  Program.cs  build-libs-linux.sh  coins.json  config.schema.json
src/Miningcore.Tests/: Miningcore.Tests.csproj
src/Miningcore.Tests/Blockchain/Kaspa/: KaspaPayoutHandlerTests.cs  KaspaTreasuryKeyDeriverTests.cs  KaspaWalletTests.cs
src/Miningcore/Api/Controllers/: AdminApiController.cs
src/Miningcore/Api/Extensions/: MiningPoolExtensions.cs
src/Miningcore/Api/Responses/: GetPoolsResponse.cs
src/Miningcore/Blockchain/: Abstractions.cs
src/Miningcore/Blockchain/Aeternity/: AeternityConstants.cs  AeternityJobManager.cs  AeternityPayoutHandler.cs  AeternityPool.cs  AeternityWorkerContext.cs
src/Miningcore/Configuration/: ClusterConfig.cs  ClusterConfigExtensions.cs  StratumServerConfig.cs
src/Miningcore/Native/: Multihash.cs
src/Miningcore/Util/: FormatUtil.cs
src/Native/libcryptonote/: Makefile  Makefile.MSys2
src/Native/libmeowpow/: libmeowpow.sln  libmeowpow.vcxproj
src/Native/libmultihash/: Makefile  exports.cpp  libmultihash.vcxproj  libmultihash.vcxproj.filters
src/RustyKaspaWallet/: Cargo.toml
src/RustyKaspaWallet/src/: lib.rs
(+48 files in other folders)
